--- a/index.html
+++ b/index.html
@@ -34,8 +34,43 @@
       </div>
     </div>
   </header>
-  <div class="slider_block in_progress">
-    <p>SLIDER</p>
+  <div class="slider_block">
+    <div id="carousel_controls" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div id="first_info_page">
+            <div class="carousel-caption d-md-block">
+              <h5>Надежность</h5>
+              <p>Подержим ваш телефон в трудную минуту.</p>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div id="second_info_page">
+            <div class="carousel-caption d-md-block">
+              <h5>Качество</h5>
+              <p>Телефоны лучшие, Джобсом клянусь!</p>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div id="third_info_page">
+            <div class="carousel-caption d-md-block">
+              <h5>Удобство</h5>
+              <p>Сами впарим вам нашу продукцию, вам даже вставать не надо.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carousel_controls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carousel_controls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
   </div>
   <div class="description_block in_progress">
     <p>GOODS DESCRIPTION</p>
