media queries for company block
added to adjust padding in the company block on md / sub-md devices and remove the gap between two blocks in column

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
         <div class="col-10 col-sm-10 col-md-10 col-lg-5">
           <div class="sub_form">
-            <p class="sub_title">ПОДПИШИСЬ</p>
+            <p class="sub_title">НОВОСТИ</p>
             <form action="">
               <div class="form-group">
                 <label for="name">Ваше имя</label>
@@ -144,7 +144,7 @@
                 <label for="email">Ваша почта</label>
                 <input type="email" name="email" id="email" class="form-control" placeholder="Введите ваш адрес электронной почты">
               </div>
-              <button type="submit" class="btn btn-primary">Подписаться!</button>
+              <button type="submit" class="btn btn-primary">Подписаться</button>
             </form>
           </div>
         </div>
