--- a/index.html
+++ b/index.html
@@ -111,8 +111,31 @@
       </div>
     </div>
   </div>
-  <div class="brands_block in_progress">
-    <p>BRANDS</p>
+  <div class="brands_block">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+          <p id="brands_title">
+            МЫ СОТРУДНИЧАЕМ
+          </p>
+        </div>
+        <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+          <img src="images/brands/apple.png" alt="">
+        </div>
+        <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+          <img src="images/brands/asus.png" alt="">
+        </div>
+        <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+          <img src="images/brands/lg.png" alt="">
+        </div>
+        <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+          <img src="images/brands/xiaomi.png" alt="">
+        </div>
+        <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+          <img src="images/brands/samsung.png" alt="">
+        </div>
+      </div>
+    </div>
   </div>
   <div class="tips_block in_progress">
     <p>TIPS</p>
