--- a/index.html
+++ b/index.html
@@ -72,8 +72,35 @@
       </a>
     </div>
   </div>
-  <div class="description_block in_progress">
-    <p>GOODS DESCRIPTION</p>
+  <div class="description_block">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-sm-12 col-md-12 col-lg 6">
+          <p id="goods_desc_title" class="text-uppercase">Достоинства мобильной электроники</p>
+        </div>
+        <div class="w-100"></div>
+        <div class="col-12 col-sm-12 col-md-12 col-lg 6">
+          <div class="row">
+            <div class="col-4">
+              <div class="list-group" id="list-tab" role="tablist">
+                <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab" aria-controls="home">Мобильность</a>
+                <a class="list-group-item list-group-item-action" id="list-profile-list" data-toggle="list" href="#list-profile" role="tab" aria-controls="profile">Доступ ко всему</a>
+                <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Неограниченные возможности</a>
+                <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Аэродинамика</a>
+              </div>
+            </div>
+            <div class="col-8">
+              <div class="tab-content" id="nav-tabContent">
+                <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">Всегда с собой</div>
+                <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">Вы не заблудитесь, не умрете с голоду и не останесь без ВК</div>
+                <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">Совершенство зависит только от бездонности вашего кошелька</div>
+                <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">Ей можно кидаться</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="list_block in_progress">
     <p>GOODS LIST</p>
