--- a/index.html
+++ b/index.html
@@ -102,8 +102,46 @@
       </div>
     </div>
   </div>
-  <div class="list_block in_progress">
-    <p>GOODS LIST</p>
+  <div class="list_block">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <p id="goods_list">
+            КАТАЛОГ ТОВАРОВ
+          </p>
+        </div>
+        <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+          <div class="card">
+            <img class="card-img-top" src="images/goods/nokia.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Телефон</h5>
+              <h6 class="card-subtitle mb-2 text-muted">999$</h6>
+              <p class="card-text">Чудо техники: молчит, не жалуется, звонить позволяет.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+          <div class="card">
+            <img class="card-img-top" src="images/goods/watch.jfif" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Часы</h5>
+              <h6 class="card-subtitle mb-2 text-muted">999$</h6>
+              <p class="card-text">Как телефон, только на руке.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+          <div class="card">
+            <img class="card-img-top" src="images/goods/ipod.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Плеер</h5>
+              <h6 class="card-subtitle mb-2 text-muted">99$</h6>
+              <p class="card-text">Звонить нельзя, но есть музыка. Наушники в комплекте.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="filter_block in_progress">
     <p>FILTER</p>
