--- a/index.html
+++ b/index.html
@@ -243,7 +243,19 @@
     <p>REVIEWS</p>
   </div>
   <div class="map_block in_progress">
-    <p>MAP</p>
+    <div class="map">
+      <a class="dg-widget-link" href="http://2gis.ru/blagoveshensk/firm/70000001040946422/center/127.519597,50.293055/zoom/16?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=bigMap">Посмотреть на карте Благовещенска</a>
+      <div class="dg-widget-link">
+        <a href="http://2gis.ru/blagoveshensk/firm/70000001040946422/photos/70000001040946422/center/127.519597,50.293055/zoom/17?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=photos">Фотографии компании</a></div><div class="dg-widget-link"><a href="http://2gis.ru/blagoveshensk/center/127.519597,50.293055/zoom/16/routeTab/rsType/bus/to/127.519597,50.293055╎Дом научной коллаборации им. М.Т. Луценко, центр развития современных компетенций детей?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=route">Найти проезд до Дом научной коллаборации им. М.Т. Луценко, центр развития современных компетенций детей</a>
+      </div>
+      <script charset="utf-8" src="https://widgets.2gis.com/js/DGWidgetLoader.js"></script>
+      <script charset="utf-8">
+      new DGWidgetLoader({"width":"100%","height":600,"borderColor":"#a3a3a3","pos":{"lat":50.293055,"lon":127.519597,"zoom":16},"opt":{"city":"blagoveshensk"},"org":[{"id":"70000001040946422"}]});
+      </script>
+      <noscript style="color:#c00;font-size:16px;font-weight:bold;">
+        Виджет карты использует JavaScript. Включите его в настройках вашего браузера.
+      </noscript>
+    </div>
   </div>
   <script src="js/jquery-3.5.1.js"></script>
   <script src="js/bootstrap.bundle.js"></script>
