--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-sm-12 col-md-12 col-lg 6">
-            <p id="goods_desc_title" class="text-uppercase">Достоинства мобильной электроники</p>
+            <p class="main-title text-uppercase">Достоинства мобильной электроники</p>
           </div>
           <div class="w-100"></div>
           <div class="col-12 col-sm-12 col-md-12 col-lg 6">
@@ -107,7 +107,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <p id="goods_list">
+            <p class="main-title">
               КАТАЛОГ ТОВАРОВ
             </p>
           </div>
@@ -151,7 +151,7 @@
       <div class="container-fluid">
         <div class="row justify-content-center">
           <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-            <p id="staff_title">НАШИ КОНСУЛЬТАНТЫ</p>
+            <p class="main-title">НАШИ КОНСУЛЬТАНТЫ</p>
           </div>
           <div class="col-12 col-sm-12 col-md-12 col-lg-3">
             <div class="staff_member">
@@ -181,7 +181,7 @@
       <div class="container-fluid">
         <div class="row justify-content-center">
           <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-            <p id="brands_title">
+            <p class="main-title">
               МЫ СОТРУДНИЧАЕМ
             </p>
           </div>
@@ -203,8 +203,70 @@
         </div>
       </div>
     </div>
-    <div class="tips_block in_progress">
-      <p>TIPS</p>
+    <div class="tips_block">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <p class="main-title">
+              ПОЛЕЗНЫЕ СОВЕТЫ
+            </p>
+          </div>
+          <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="card">
+              <img src="images/tips/charge.jfif" alt="" class="card-img-top">
+              <div class="card-body">
+                <p class="card-text">
+                  Заряжайте телефон. Без этого они не работают. Печальный факт.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="card">
+              <img src="images/tips/fall.jpg" alt="" class="card-img-top">
+              <div class="card-body">
+                <p class="card-text">
+                  Не роняйте свой гаджет. К сожалению, гравитация не щадит даже ваши устройства. Особенно их, на самом деле.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="card">
+              <img src="images/tips/water.jpg" alt="" class="card-img-top">
+              <div class="card-body">
+                <p class="card-text">
+                  Не купайте свой телефон. Он этого не оценит. Даже если написано, что можно. Не надо.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+            <figure class="figure">
+              <img src="images/tips/charge.jfif" class="figure-img img-fluid rounded" alt="Charge">
+              <figcaption class="figure-caption">
+                Заряжайте телефон. Без этого они не работают. Печальный факт.
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+            <figure class="figure">
+              <img src="images/tips/fall.jpg" class="figure-img img-fluid rounded" alt="Charge">
+              <figcaption class="figure-caption">
+                Заряжайте телефон. Без этого они не работают. Печальный факт.
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+            <figure class="figure">
+              <img src="images/tips/water.jpg" class="figure-img img-fluid rounded" alt="Charge">
+              <figcaption class="figure-caption">
+                Не купайте свой телефон. Он этого не оценит. Даже если написано, что можно. Не надо.
+              </figcaption>
+            </figure>
+          </div> -->
+        </div>
+      </div>
     </div>
     <div class="company_block">
       <div class="container-fluid">
@@ -243,7 +305,7 @@
     <div class="reviews_block in_progress">
       <p>REVIEWS</p>
     </div>
-    <div class="map_block in_progress">
+    <div class="map_block">
       <div class="map">
         <a class="dg-widget-link" href="http://2gis.ru/blagoveshensk/firm/70000001040946422/center/127.519597,50.293055/zoom/16?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=bigMap">Посмотреть на карте Благовещенска</a>
         <div class="dg-widget-link">
