--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       </div>
     </div>
     <div class="brands_block">
-      <div class="container-fluid">
+      <div class="container">
         <div class="row justify-content-center">
           <div class="col-12 col-sm-12 col-md-12 col-lg-12">
             <p class="main-title">
@@ -241,30 +241,6 @@
               </div>
             </div>
           </div>
-          <!-- <div class="col-12 col-sm-12 col-md-4 col-lg-4">
-            <figure class="figure">
-              <img src="images/tips/charge.jfif" class="figure-img img-fluid rounded" alt="Charge">
-              <figcaption class="figure-caption">
-                Заряжайте телефон. Без этого они не работают. Печальный факт.
-              </figcaption>
-            </figure>
-          </div>
-          <div class="col-12 col-sm-12 col-md-4 col-lg-4">
-            <figure class="figure">
-              <img src="images/tips/fall.jpg" class="figure-img img-fluid rounded" alt="Charge">
-              <figcaption class="figure-caption">
-                Заряжайте телефон. Без этого они не работают. Печальный факт.
-              </figcaption>
-            </figure>
-          </div>
-          <div class="col-12 col-sm-12 col-md-4 col-lg-4">
-            <figure class="figure">
-              <img src="images/tips/water.jpg" class="figure-img img-fluid rounded" alt="Charge">
-              <figcaption class="figure-caption">
-                Не купайте свой телефон. Он этого не оценит. Даже если написано, что можно. Не надо.
-              </figcaption>
-            </figure>
-          </div> -->
         </div>
       </div>
     </div>
@@ -302,8 +278,41 @@
         </div>
       </div>
     </div>
-    <div class="reviews_block in_progress">
-      <p>REVIEWS</p>
+    <div class="reviews_block">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <p class="main-title">ОТЗЫВЫ</p>
+          </div>
+          <div class="col-12 col-lg-6">
+            <div class="media">
+              <img class="mr-3" src="images/reviews/user_1.png" alt="Generic placeholder image">
+              <div class="media-body">
+                <h5 class="mt-0">Pablo</h5>
+                <p>Bueno, los teléfonos. Prefiero construirme un teléfono inteligente antes que estos tipos vendan algo bueno.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-6">
+            <div class="media">
+              <img class="mr-3" src="images/reviews/user_2.png" alt="Generic placeholder image">
+              <div class="media-body">
+                <h5 class="mt-0">Юрий</h5>
+                <p>Лучшие консультанты на свете!</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-lg-6">
+            <div class="media">
+              <img class="mr-3" src="images/reviews/user_3.png" alt="Generic placeholder image">
+              <div class="media-body">
+                <h5 class="mt-0">Борис</h5>
+                <p>Здесь был Борян.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="map_block">
       <div class="map">
