--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       </div>
     </div>
     <div class="brands_block">
-      <div class="container">
+      <div class="container-fluid">
         <div class="row justify-content-center">
           <div class="col-12 col-sm-12 col-md-12 col-lg-12">
             <p class="main-title">
