--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
             <div class="row">
               <div class="col-6">
                 <div class="list-group" id="list-tab" role="tablist">
-                  <a class="list-group-item list-group-item-action active" id="list-mobility-list" data-toggle="list" href="#list-mobility" role="tab" aria-controls="mobility">Мобильность</a>
-                  <a class="list-group-item list-group-item-action" id="list-accessibility-list" data-toggle="list" href="#list-accessibility" role="tab" aria-controls="accessibility">Доступ ко всему</a>
-                  <a class="list-group-item list-group-item-action" id="list-abilities-list" data-toggle="list" href="#list-abilities" role="tab" aria-controls="abilities">Неограниченные возможности</a>
-                  <a class="list-group-item list-group-item-action" id="list-dynamics-list" data-toggle="list" href="#list-dynamics" role="tab" aria-controls="dynamics">Аэродинамика</a>
+                  <a class="list-group-item list-group-item-secondary list-group-item-action active" id="list-mobility-list" data-toggle="list" href="#list-mobility" role="tab" aria-controls="mobility">Мобильность</a>
+                  <a class="list-group-item list-group-item-secondary list-group-item-action" id="list-accessibility-list" data-toggle="list" href="#list-accessibility" role="tab" aria-controls="accessibility">Доступ ко всему</a>
+                  <a class="list-group-item list-group-item-secondary list-group-item-action" id="list-abilities-list" data-toggle="list" href="#list-abilities" role="tab" aria-controls="abilities">Неограниченные возможности</a>
+                  <a class="list-group-item list-group-item-secondary list-group-item-action" id="list-dynamics-list" data-toggle="list" href="#list-dynamics" role="tab" aria-controls="dynamics">Аэродинамика</a>
                 </div>
               </div>
               <div class="col-6">
@@ -137,10 +137,10 @@
                 <div class="col-9 col-md-12 text-center">
                   <div class="row">
                     <div class="col-12">
-                      <input class="btn btn-primary filter-button show-button" type="button" value="Показать">
+                      <input class="btn btn-secondary filter-button show-button" type="button" value="Показать">
                     </div>
                     <div class="col-12">
-                      <input class="btn btn-primary filter-button reset-button" type="button" value="Сброс">
+                      <input class="btn btn-secondary filter-button reset-button" type="button" value="Сброс">
                     </div>
                   </div>
                 </div>
@@ -308,7 +308,7 @@
                   <label for="email">Ваша почта</label>
                   <input type="email" name="email" id="email" class="form-control" placeholder="Введите ваш адрес электронной почты" required>
                 </div>
-                <button type="submit" class="btn btn-primary">Подписаться</button>
+                <button type="submit" class="btn btn-secondary">Подписаться</button>
               </form>
             </div>
           </div>
